bk_ida/gccida/c1/fixup_var_refs_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2443:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v49; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2445:6: error: use of undeclared identifier 'v51'
rtx *v51; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2447:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2447:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2449:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2449:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2453:4: error: expected ';' after expression
rtx v59; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2453:5: error: use of undeclared identifier 'v59'
rtx v59; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2457:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v63; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2458:1: error: must use 'enum' tag to refer to type 'extraction_pattern'
extraction_pattern v64; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2459:4: error: expected ';' after expression
rtx v65; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2459:5: error: use of undeclared identifier 'v65'
rtx v65; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2460:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v66; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2464:4: error: expected ';' after expression
rtx v70; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2464:5: error: use of undeclared identifier 'v70'
rtx v70; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2465:4: error: expected ';' after expression
rtx v71; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2465:5: error: use of undeclared identifier 'v71'
rtx v71; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/function.c:2473:4: error: expected ';' after expression
rtx v79; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fixup_var_refs_1/src/obj/function.o] Error 1
